RESOLVED FIXED 153614
Modern IDB: SQLite backend doesn't handle mutation during cursor iteration
https://bugs.webkit.org/show_bug.cgi?id=153614
Summary Modern IDB: SQLite backend doesn't handle mutation during cursor iteration
Brady Eidson
Reported 2016-01-28 13:44:54 PST
Modern IDB: SQLite backend doesn't handle mutation during cursor iteration
Attachments
Patch v1 (7.78 KB, patch)
2016-01-28 14:47 PST, Brady Eidson
achristensen: review+
Brady Eidson
Comment 1 2016-01-28 14:47:33 PST
Created attachment 270147 [details] Patch v1
Brady Eidson
Comment 2 2016-01-28 14:53:47 PST
Andy Estes
Comment 3 2016-01-28 14:54:48 PST
Comment on attachment 270147 [details] Patch v1 View in context: https://bugs.webkit.org/attachment.cgi?id=270147&action=review > Source/WebCore/Modules/indexeddb/server/SQLiteIDBTransaction.cpp:137 > + auto backingStoreTake = m_backingStoreCursors.take(&cursor); > + if (backingStoreTake) { How about if (auto* takenBackingStore = m_backingStoreCursors.take(&cursor)) { takenBackingStore seems like a better name than backingStoreTake.
Note You need to log in before you can comment on or make changes to this bug.